<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="40sp"
        android:background="@color/sena"
        android:paddingTop="25sp"
        android:paddingBottom="25sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        app:srcCompat="@drawable/logosena" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/edit_pass"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnIng"
        android:layout_width="152dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/sena"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_google"
        android:textColor="@color/black"
        app:strokeColor="#C1C1C1"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/btnCre"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:backgroundTint="#0088FF"
        android:text="@string/btn_cuenta" />

    <TextView
        android:id="@+id/rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#0088FF"
        android:textColorLink="#008EFF" />

</LinearLayout>
